[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/portal.png" type="Texture" id=1]
[ext_resource path="res://Portal.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Portal"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.3423
height = 29.0734

[sub_resource type="Animation" id=3]
resource_name = "Fade_In"
tracks/0/type = "value"
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.819608 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Portal" type="Area2D"]
monitorable = false
collision_layer = 0
script = ExtResource( 2 )

[node name="PortalAnimation" type="AnimationPlayer" parent="."]
anims/Portal = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.667419, -56.3917 )
scale = Vector2( 0.215114, 0.16798 )
texture = ExtResource( 1 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.566986, -63.4784 )
shape = SubResource( 2 )

[node name="Transition" type="CanvasLayer" parent="."]
layer = 128

[node name="ColorRect" type="ColorRect" parent="Transition"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionAnimation" type="AnimationPlayer" parent="."]
anims/Fade_In = SubResource( 3 )
anims/Start = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
